invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_12.src
.IPPcode24
JUMPIFNEQ label1 TF@c GF@b LF@b